fix(ui): set aspect ratio for lottie
prevent layout shift upon page load by fixing the aspect ratio of
.logo-frame to a fixed value

--- a/src/assets/styles/central.css
+++ b/src/assets/styles/central.css
@@ -17,7 +17,9 @@
 }
 
 .logo-frame {
+  width: 100%;
   padding: 0 5rem;
+  aspect-ratio: 4 / 1;
 }
 
 .hero {
